tests/baselines/reference/parserGenericConstraint2.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericConstraint2.ts(1,19): error TS2304: Cannot find name 'List'.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserGenericConstraint2.ts (1 errors) ====
    class C<T extends List<T> > {
                      ~~~~
!!! error TS2304: Cannot find name 'List'.
    }